--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.css", "node_modules/bulma/css/bulma.css"],
+            "styles": [
+              "src/styles.css",
+              "node_modules/bulma/css/bulma.css",
+              "node_modules/font-awesome/css/font-awesome.css"
+            ],
             "scripts": []
           },
           "configurations": {
