--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bulma": "^0.7.1",
     "core-js": "^2.5.4",
     "electron": "^2.0.2",
+    "font-awesome": "^4.7.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
