--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.css",
+              "src/assets/styles/global.scss",
               "node_modules/bulma/css/bulma.css",
               "node_modules/font-awesome/css/font-awesome.css"
             ],
