--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,10 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
             "styles": [
               "src/styles.css",
               "src/assets/styles/global.scss",
@@ -26,7 +29,10 @@
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/angular2-toaster/toaster.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "src/assets/js/app.js"
+            ]
           },
           "configurations": {
             "production": {
