--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^2.5.4",
     "electron": "^2.0.2",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
